fix: optimize the layout shift when image load first time #31

--- a/resources/less/custom.less
+++ b/resources/less/custom.less
@@ -27,8 +27,11 @@
 }
 
 // for image size optimize
-.Post-body img[width][height] {
+.Post-body img[width][height]:not([width=""]):not([height=""]) {
     height: auto;
+}
+
+.Post-body img {
     object-fit: contain;
 }
 
